[package]
authors = ["eadf <lacklustr@protonmail.com>"]
name = "libstacker"
license = "MIT OR Apache-2.0"
version = "0.0.7"
edition = "2021"
readme = "README.md"
keywords = ["opencv", "image_stacking"]
repository = "https://github.com/eadf/libstacker.rs"
description = "Image alignment and stacking functions based on OpenCV and Rayon"

[[example]]
name = "main"
path = "examples/main.rs"

[dependencies]
opencv = { version = "0.85.3" , features = ["features2d"] }
thiserror = "1.0.50"
ordered-float = "4.1.1"
rayon = "1.8"

[features]
clang-runtime = ["opencv/clang-runtime"]
