[package]
authors = ["eadf <lacklustr@protonmail.com>"]
name = "libstacker"
license = "MIT OR Apache-2.0"
version = "0.0.7"
edition = "2024"
readme = "README.md"
keywords = ["opencv", "image_stacking"]
repository = "https://github.com/eadf/libstacker.rs"
description = "Image alignment and stacking functions based on OpenCV and Rayon"

[[example]]
name = "main"
path = "examples/main.rs"

[dependencies]
opencv = { version = "0.94.3" , features = ["features2d"] }
thiserror = "2.0.12"
ordered-float = "5.0.0"
rayon = "1.10.0"

[features]
clang-runtime = ["opencv/clang-runtime"]
