[package]
authors = ["eadf <lacklustr@protonmail.com>"]
name = "libstacker"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
readme = "README.md"
keywords = ["opencv", "image_stacking"]
repository = "https://github.com/eadf/libstacker.rs"
description = "Image alignment and stacking functions based on OpenCV and Rayon"
rust-version = "1.87.0"

[[example]]
name = "main"
path = "examples/main.rs"
doc = false

[dependencies]
opencv = { version = "0.97.2", features = ["features2d"] }
thiserror = "2.0.17"
rayon = "1.11.0"

[features]
default = ["clang-runtime"]
clang-runtime = ["opencv/clang-runtime"]

[profile.dev]
debug = 2  # Full debug info
